# loaderQML

./: CMakeLists.txt  Pkg2.cc  Pkg2.h  Pkgs2.cpp  Pkgs2.h  Qqq.qml  README.md  TestQML.cc  TestQML.h  main.cpp  main.qml  qml.qrc  test.js
tmp/: FragmentTmp.qml  Main3.qml  Pkgs.qml  install.qml  main.qml  main2.qml
